--- a/Boston_Housing.ipynb
+++ b/Boston_Housing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPu7UIYGYL1oTaPCR5N+b0s",
+      "authorship_tag": "ABX9TyO/uNCp8xmJcdSvGHoT6YGc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Regresión: Base de datos de Boston Hosing\n"
+        "# Regresión: Base de datos de Boston Housing\n"
       ],
       "metadata": {
         "id": "bXCULcE9niOt"
