--- a/Boston_Housing.ipynb
+++ b/Boston_Housing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/uNCp8xmJcdSvGHoT6YGc",
+      "authorship_tag": "ABX9TyPXhvNxMdQXxCZboIYA22C3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
         "id": "gJyFezC3y5RS",
         "outputId": "b00b2b94-751a-4722-bb64-f83b003ec090"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "bx52s7H_4DON"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -328,7 +328,7 @@
       "cell_type": "markdown",
       "source": [
         "### Compilación del modelo\n",
-        "Para este modelo utilizaremos gradiente descendiente [sgd](https://keras.io/api/optimizers/sgd/) como optimizador, error cuadrático medio [mse](https://keras.io/api/losses/regression_losses/) como función de perdida y el máxima error absoluto [mae](https://www.tensorflow.org/api_docs/python/tf/keras/metrics/mean_absolute_error) como métrica."
+        "Para este modelo utilizaremos gradiente descendiente [rmsprop](https://keras.io/api/optimizers/rmsprop/) como optimizador, error cuadrático medio [mse](https://keras.io/api/losses/regression_losses/) como función de perdida y el máxima error absoluto [mae](https://www.tensorflow.org/api_docs/python/tf/keras/metrics/mean_absolute_error) como métrica."
       ],
       "metadata": {
         "id": "-pI1emi4z3jI"
