--- a/mnist_fashion.ipynb
+++ b/mnist_fashion.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Semillero-de-Neuroinformatica-IA/DeepLearning--with-python/blob/main/mnist_fashion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Semillero-de-Neuroinformatica-IA/DeepLearning-con-python/blob/main/mnist_fashion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -316,8 +316,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "# k fold validation\n",
         "k = 4\n",
         "num_val_samples = len(train_data) // k\n",
@@ -418,12 +416,12 @@
     {
       "cell_type": "code",
       "source": [
-        "model=tf.keras.models.Sequential([\n",
+        "modelc=tf.keras.models.Sequential([\n",
         "    tf.keras.layers.Flatten(),\n",
         "    tf.keras.layers.Dense(128, activation='relu'),\n",
         "    tf.keras.layers.Dense(10,activation='softmax')\n",
         "])\n",
-        "model.compile(loss='sparse_categorical_crossentropy', optimizer='Adam', metrics=[ 'accuracy'])"
+        "modelc.compile(loss='sparse_categorical_crossentropy', optimizer='Adam', metrics=[ 'accuracy'])"
       ],
       "metadata": {
         "id": "XyS3onRd4Kna"
@@ -444,10 +442,82 @@
     {
       "cell_type": "code",
       "source": [
-        "model.fit(train_images, train_labels, epochs=10, callbacks=myCallback())"
+        "modelc.fit(train_images, train_labels, epochs=10, callbacks=myCallback())"
       ],
       "metadata": {
         "id": "cUpHMAen6Qdu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Mejorando el sistema de visión por computador\n",
+        "Cuando se pasa la imagen a una red neuronal, esta se transforma en un vector, lo cual conlleva a que la información que esta contenido de manera espacial en la imagen se pierda. Para evitar esto existe la red convolucional, la cual aplica el principio de convolución. El proceso de convolucion se utiliza para extraer información en el imagen."
+      ],
+      "metadata": {
+        "id": "D1PB1Fpi4xbO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "modeld=tf.keras.models.Sequential([\n",
+        "     # Add convolutions and max pooling\n",
+        "    tf.keras.layers.Conv2D(32, (3,3), activation='relu', input_shape=(28, 28, 1)),\n",
+        "    tf.keras.layers.MaxPooling2D(2, 2),\n",
+        "    tf.keras.layers.Conv2D(32, (3,3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPooling2D(2,2),\n",
+        "\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(128, activation='relu'),\n",
+        "    tf.keras.layers.Dense(10,activation='softmax')\n",
+        "])\n",
+        "modeld.compile(loss='sparse_categorical_crossentropy', optimizer='Adam', metrics=[ 'accuracy'])"
+      ],
+      "metadata": {
+        "id": "edt_SExV5dHH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ahora entrenamos el sistema"
+      ],
+      "metadata": {
+        "id": "lLjAI4lS6hr7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "modeld.fit(training_images, training_labels, epochs=10)"
+      ],
+      "metadata": {
+        "id": "xuLftGWF6knZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ahora probaremos el sistema en las imágenes de prueba"
+      ],
+      "metadata": {
+        "id": "PZH0EdDG7Lko"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "modeld.evaluate(test_images, test_labels)"
+      ],
+      "metadata": {
+        "id": "LeEEuNDw7WMB"
       },
       "execution_count": null,
       "outputs": []
